clean up complex methods, make auctionhouse toggle & reload close all inventories, cont. work on gui layouts (on profile to go)